--- a/app/pages/AboutOverlay/_about-overlay.scss
+++ b/app/pages/AboutOverlay/_about-overlay.scss
@@ -16,7 +16,7 @@
 .about-overlay__inner {
 	position: relative;
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	background: red;
 	transition: transform 0.4s ease-out;
 }
