--- a/app/main.scss
+++ b/app/main.scss
@@ -2,6 +2,7 @@
 @import './scss/_vars.scss';
 
 @import './pages/AboutOverlay/_about-overlay';
+@import './pages/PageOverlay/_page-overlay';
 
 @import './components/StickyNav/_sticky-nav';
 @import './components/Cover/_cover';
