--- a/app/pages/PageOverlay/_page-overlay.scss
+++ b/app/pages/PageOverlay/_page-overlay.scss
@@ -4,7 +4,9 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	background: rgba(#00ff00, 0.5);
+	background: #363636;
+	color: #12843D;
+	padding: 50px $side-padding--desktop 130px $side-padding--desktop;
 }
 
 .page-overlay--hidden {
