--- a/app/pages/AboutOverlay/_about-overlay.scss
+++ b/app/pages/AboutOverlay/_about-overlay.scss
@@ -17,7 +17,7 @@
 .about-overlay__spacer {
 	min-height: 100vh;
 }
-
+ 
 .about-overlay__inner-scroller {
 	position: fixed;
 	top: 0;
@@ -31,7 +31,7 @@
 	top: 0;
 	width: 100%;
 	min-height: 100vh;
-	background: red;
+	background: #232323;
 	transition: transform 0.4s ease-out;
 }
 
@@ -46,9 +46,9 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	transition: background 0.4s ease-out;
+	transition: background 0.1s ease-out 0.4s;
 }
 
 .about-overlay__shim--visible {
-	background: rgba(#000, 0.8);
+	background: rgba(#E5311D, 0.8);
 }
