--- a/app/components/Feed/_feed.scss
+++ b/app/components/Feed/_feed.scss
@@ -3,13 +3,22 @@
 	color: #12843D;
 	padding: 50px $side-padding--desktop 130px $side-padding--desktop;
 	min-height: calc(100vh - 48px);
+
+	@include mobile {
+		padding: 50px $side-padding--mobile 130px $side-padding--mobile;
+	}
 }
 
 .feed__item {
 	margin-bottom: 60px;
 	border-bottom: 3px solid #12843D;
-	padding-bottom: 2px;
+	// padding-bottom: 0px;
 	font-size: 0;
+
+	@include mobile {
+		padding-bottom: 4px;
+		border-bottom: 2px solid #12843D;
+	}
 }
 
 .feed__item-title-wrapper {
@@ -24,7 +33,12 @@
 	letter-spacing: 0.016em;
 	line-height: 1em;
 	flex-grow: 0;
-	height: 0%
+	height: 0%;
+	white-space: nowrap;
+
+	@include mobile {
+		font-size: 18px;
+	}
 }
 
 
@@ -35,7 +49,12 @@
 	flex-grow: 1;
 	margin-right: 50px;
 	display: inline-block;
-	height: 0%
+	height: 0%;
+
+	@include mobile {
+		font-size: 24px;
+		margin-right: 35px;
+	}
 }
 
 .feed__item-type {
@@ -44,6 +63,10 @@
 	line-height: 1em;
 	margin-bottom: 2px;
 	display: block;
+
+	@include mobile {
+		font-size: 14px;
+	}
 }
 
 .feed__item-link-wrapper {
