--- a/app/components/FeedFilter/_feed-filter.scss
+++ b/app/components/FeedFilter/_feed-filter.scss
@@ -5,6 +5,11 @@
 	letter-spacing: 0.145em;
 	cursor: pointer;
 	user-select: none;
+
+	@include mobile {
+		font-size: 10px;
+		margin-right: 15px;
+	}
 }
 
 .filter__option:last-child {
