--- a/app/main.scss
+++ b/app/main.scss
@@ -8,6 +8,7 @@
 @import './components/Feed/_feed';
 @import './components/FeedFilter/_feed-filter';
 @import './components/ScrollOverlay/_scroll-overlay';
+@import './components/VideoPreview/_video-preview';
 
 @import './pages/Post/_post';
 
