--- a/app/components/Feed/_feed.scss
+++ b/app/components/Feed/_feed.scss
@@ -27,7 +27,7 @@
 	justify-content: space-between;
 }
 
-.feed__item-title-wrapper a {
+.feed__item-link {
 	text-align: bottom;
 	font-size: 28px;
 	letter-spacing: 0.016em;
@@ -35,6 +35,7 @@
 	flex-grow: 0;
 	height: 0%;
 	white-space: nowrap;
+	cursor: pointer;
 
 	@include mobile {
 		font-size: 18px;
