added favicon and card

--- a/app/components/StickyNav/_sticky-nav.scss
+++ b/app/components/StickyNav/_sticky-nav.scss
@@ -17,6 +17,7 @@
 	align-items: center;
 	justify-content: space-between;
 	line-height: 1em;
+	z-index: 1;
 
 	@include mobile {
 		padding: 0 $side-padding--mobile;
