--- a/app/components/VideoPreview/_video-preview.scss
+++ b/app/components/VideoPreview/_video-preview.scss
@@ -1,9 +1,12 @@
 .video-preview {
 	width: 240px;
 	height: 135px;
-	margin-bottom: 15px;
-	margin-top: 2px;
-	position: relative;
+	width: 160px;
+	height: 90px;
+	margin-bottom: 10px;
+	// margin-top: 2px;
+	// position: relative;
+	background: rgba(#ccc, 0.08);
 
 	@include mobile {
 		width: 160px;
@@ -18,8 +21,13 @@
 	transform: scale(0.5);
 	transform-origin: top left;
 	pointer-events: none;
+	transition: opacity 0.66s ease-in;
 
 	@include mobile {
 		pointer-events: auto;
 	}
+}
+
+.video-preview--hidden iframe {
+	opacity: 0;
 }
