--- a/app/components/About/_about.scss
+++ b/app/components/About/_about.scss
@@ -90,11 +90,20 @@
 }
 
 .about__social-item {
-	width: 12px;
-	height: 12px;
-	background: #3D93FF;
+	// width: 12px;
+	// height: 12px;
+	// background: #3D93FF;
+	font-size: 13px;
 	display: inline-block;
 	margin-right: 22px;
+}
+
+.about__social-item:hover {
+	opacity: 0.7;
+}
+
+.about__social-item:active {
+	opacity: 0.5;
 }
 
 .about__social-item:last-child {
