--- a/app/components/Cover/_cover.scss
+++ b/app/components/Cover/_cover.scss
@@ -1,31 +1,75 @@
 .cover {
 	position: relative;
 	padding: 15px;
+	background: #E5311D;
+	background: #000;
+	// background: #BF1179;
 
 	@include mobile {
 		padding: 6px;
 	}
 }
 
+
 .cover__canvas {
 	position: fixed;
 	top: 0;
 	left: 0;
 	background: #DDD;
+	background: #000;
+	transition: opacity 0.1s linear;
+	// z-index: 1;
+	// opacity: 1 !important;
+}
+
+.cover__canvas-wrapper--fixed {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 20px;
+	z-index: 5;
+	overflow: hidden;
+	transform: translateZ(0);
+	background: #000;
+	box-shadow:
+		0 1px 2px rgba(#000, 0.15),
+		0 0px 15px rgba(#000, 0.33);
+}
+
+.cover__canvas-wrapper {
+	// position: relative;
+}
+
+.cover__canvas-wrapper--fixed .cover__canvas {
+	position: relative;
 }
 
 .cover,
 .cover__canvas {
 	width: 100%;
-	height: 55.5vw;
-	max-height: 88vh;
+	height: 100vh;
+	height: 33vh;
+	// height: 40px;
+	// height: calc(50vh + 40px);
+	// height: calc(100vh - 40px);
+	// height: 55.5vw;
+	// max-height: 88vh;
 }
 
 .cover__wordmark {
 	position: absolute;
 	bottom: 10px;
-	width: 50%;
-	max-width: 800px;
+	bottom: 10px;
+	left: 25px;
+	width: 222px;
+	// max-width: 300px;
+	// width: 100%;
+	// height: 20px;
+	z-index: 6;
+	// height: 100%;
+	// filter: invert(95%);
+	// display: none;
 
 	@include mobile {
 		width: 66%;
