--- a/app/components/ScrollOverlay/_scroll-overlay.scss
+++ b/app/components/ScrollOverlay/_scroll-overlay.scss
@@ -34,6 +34,9 @@
 	min-height: 100vh;
 	background: #232323;
 	transition: transform 0.4s ease-out;
+	box-shadow:
+		0 1px 2px rgba(#000, 0.15),
+		0 0px 15px rgba(#000, 0.33);
 }
 
 .scroll-overlay__inner--transform {
@@ -51,5 +54,6 @@
 }
 
 .scroll-overlay__shim--visible {
-	background: rgba(#E5311D, 1);
+	// background: rgba(#E5311D, 1);
+	background: rgba(#bbb, 1);
 }
