--- a/app/components/StickyNav/_sticky-nav.scss
+++ b/app/components/StickyNav/_sticky-nav.scss
@@ -1,13 +1,20 @@
 .sticky-nav__wrapper {
 	display: block;
 	height: 48px;
-	background: #363636;
+	// z-index: 4;
+	// position: relative;
+	background: #333333;
 }
 
 .sticky-nav {
 	color: #DB6741;
-	background: #363636;
+	// color: #000;
+	// font-weight: bold;
+	background: rgba(#333333, 1);
+	z-index: 5;
+	position: relative;
 	padding: 0 $side-padding--desktop;
+	padding-top: 4px;
 	display: block;
 	height: 48px;
 	top: 0;
@@ -18,10 +25,24 @@
 	justify-content: space-between;
 	line-height: 1em;
 	z-index: 1;
+	border-bottom: 1px solid transparent;
+	transition: border 0.1s ease, box-shadow 0.2s ease;
+
 
 	@include mobile {
 		padding: 0 $side-padding--mobile;
 	}
+}
+
+.sticky-nav--fixed {
+	position: fixed;
+	// z-index: 5;
+	top: 20px;
+	border-bottom: 1px solid rgba(#DB6741, 0.8);
+	box-shadow:
+		0 1px 2px rgba(#000, 0.15),
+		0 0px 15px rgba(#000, 0.33);
+	// background: rgba(#000, 0.7);
 }
 
 .about-button {
