--- a/app/components/VideoPreview/_video-preview.scss
+++ b/app/components/VideoPreview/_video-preview.scss
@@ -7,6 +7,7 @@
 	// margin-top: 2px;
 	// position: relative;
 	background: rgba(#ccc, 0.08);
+	background: rgba(#12843D, 1);
 
 	@include mobile {
 		width: 160px;
