--- a/app/components/Cover/_cover.scss
+++ b/app/components/Cover/_cover.scss
@@ -32,6 +32,8 @@
 	overflow: hidden;
 	transform: translateZ(0);
 	background: #000;
+	cursor: pointer;
+	// opacity: 0.8;
 	box-shadow:
 		0 1px 2px rgba(#000, 0.15),
 		0 0px 15px rgba(#000, 0.33);
