--- a/app/components/Cover/_cover.scss
+++ b/app/components/Cover/_cover.scss
@@ -22,6 +22,11 @@
 	// opacity: 1 !important;
 }
 
+.cover__canvas-wrapper {
+	// opacity: 0;
+	transition: opacity 0.2s ease;
+}
+
 .cover__canvas-wrapper--fixed {
 	position: fixed;
 	top: 0;
@@ -33,7 +38,7 @@
 	transform: translateZ(0);
 	background: #000;
 	cursor: pointer;
-	// opacity: 0.8;
+	opacity: 1;
 	box-shadow:
 		0 1px 2px rgba(#000, 0.15),
 		0 0px 15px rgba(#000, 0.33);
