--- a/app/main.scss
+++ b/app/main.scss
@@ -9,6 +9,7 @@
 @import './components/FeedFilter/_feed-filter';
 @import './components/ScrollOverlay/_scroll-overlay';
 @import './components/VideoPreview/_video-preview';
+@import './components/ImageLoader/_image-loader';
 
 @import './pages/Post/_post';
 
