--- a/app/pages/Post/_post.scss
+++ b/app/pages/Post/_post.scss
@@ -50,6 +50,21 @@
 	background: #12843D;
 }
 
+.post__images {
+	max-width: 600px;
+	position: relative;
+}
+
+.post__image {
+	width: 100%;
+	margin-bottom: 20px;
+}
+
+.post__image img {
+	width: 100%;
+	height: auto;
+}
+
 
 
 .post__text p {
