--- a/app/main.scss
+++ b/app/main.scss
@@ -42,7 +42,7 @@ a {
 
 .home__content {
 	position: relative;
-	background: #ffffff;
+	background: #000;
 	transition:
 		opacity 1s ease-out,
 		transform 2.5s cubic-bezier(0, 1, 0.5, 1);
