--- a/app/components/FeedFilter/_feed-filter.scss
+++ b/app/components/FeedFilter/_feed-filter.scss
@@ -2,6 +2,8 @@
 	margin-right: 25px;
 	text-transform: uppercase;
 	font-size: 11px;
+	padding-left: 3px;
+	line-height: 1em;
 	letter-spacing: 0.145em;
 	cursor: pointer;
 	user-select: none;
@@ -18,4 +20,5 @@
 
 .filter__option--active {
 	pointer-events: none;
+	// border-left: 1px solid rgba(#DB6741, 0.8);
 }
