--- a/app/components/ScrollOverlay/_scroll-overlay.scss
+++ b/app/components/ScrollOverlay/_scroll-overlay.scss
@@ -9,7 +9,7 @@
 	overflow: scroll;
 	-webkit-overflow-scrolling: touch;
 	backface-visibility: hidden;
-	z-index: 2;
+	z-index: 3;
 }
 
 .scroll-overlay--hidden {
@@ -62,7 +62,7 @@
 
 .scroll-overlay__hint {
 	position: fixed;
-	bottom: 10px;
+	bottom: 15px;
 	left: 50%;
 	transform: translateX(-50%);
 	text-transform: uppercase;
@@ -77,4 +77,7 @@
 .scroll-overlay__hint--visible {
 	opacity: 1;
 	transition: opacity 0.1s ease-out 0.4s;
+	text-shadow:
+		0 0 2px rgba(#000, 0.1),
+		0 0 22px rgba(#fff, 0.1);
 }
