--- a/app/components/VideoPreview/_video-preview.scss
+++ b/app/components/VideoPreview/_video-preview.scss
@@ -4,6 +4,7 @@
 	width: 160px;
 	height: 90px;
 	margin-bottom: 10px;
+	position: relative;
 	// margin-top: 2px;
 	// position: relative;
 	background: rgba(#ccc, 0.08);
@@ -31,4 +32,12 @@
 
 .video-preview--hidden iframe {
 	opacity: 0;
+}
+
+.video-preview__fallback-image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
