--- a/app/components/About/_about.scss
+++ b/app/components/About/_about.scss
@@ -98,9 +98,9 @@
 	margin-right: 22px;
 }
 
-.about__social-item:hover {
-	opacity: 0.7;
-}
+// .about__social-item:hover {
+// 	opacity: 0.7;
+// }
 
 .about__social-item:active {
 	opacity: 0.5;
