--- a/app/components/Cover/_cover.scss
+++ b/app/components/Cover/_cover.scss
@@ -18,6 +18,8 @@
 	background: #DDD;
 	background: #000;
 	transition: opacity 0.1s linear;
+	image-rendering: crisp-edges;
+	// transform: scale(2.5);
 	// z-index: 1;
 	// opacity: 1 !important;
 }
@@ -70,15 +72,17 @@
 .cover__wordmark {
 	position: absolute;
 	bottom: 10px;
-	bottom: 10px;
+	bottom: -35px;
 	left: 25px;
-	width: 222px;
+	// width: 100px;
+	width: auto;
+	height: 75%;
 	// max-width: 300px;
 	// width: 100%;
 	// height: 20px;
 	z-index: 6;
 	// height: 100%;
-	// filter: invert(95%);
+	filter: invert(100%);
 	// display: none;
 
 	@include mobile {
