--- a/app/components/FeedFilter/_feed-filter.scss
+++ b/app/components/FeedFilter/_feed-filter.scss
@@ -1,5 +1,5 @@
 .filter__option {
-	margin-right: 25px;
+	padding-right: 25px;
 	text-transform: uppercase;
 	font-size: 11px;
 	padding-left: 3px;
@@ -7,6 +7,7 @@
 	letter-spacing: 0.145em;
 	cursor: pointer;
 	user-select: none;
+	position: relative;
 
 	@include mobile {
 		font-size: 10px;
@@ -14,11 +15,50 @@
 	}
 }
 
+.filter__option span {
+	position: relative;
+	pointer-events: none;
+}
+
 .filter__option:last-child {
-	margin-right: 0;
+	padding-right: 0;
 }
 
 .filter__option--active {
-	pointer-events: none;
+	cursor: default;
+	// pointer-events: none;
 	// border-left: 1px solid rgba(#DB6741, 0.8);
 }
+
+.filter__option:before {
+	content: '';
+	width: 58px;
+	height: 60px;
+	background: red;
+	display: block;
+	position: absolute;
+	top: -17px;
+	left: 50%;
+	transform: translate(-78%, 0);
+	background: url('../images/orka-cartoon.png');
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity 0.05s ease;
+	filter: drop-shadow(0 0 5px rgba(#000, 0.6));
+}
+
+// .filter:hover .filter__option--active:before {
+// 	opacity: 0;
+// }
+
+.filter__option--active:before {
+	opacity: 1;
+}
+
+.filter__option:hover:before {
+	opacity: 1;
+}
+
