--- a/app/components/ScrollOverlay/_scroll-overlay.scss
+++ b/app/components/ScrollOverlay/_scroll-overlay.scss
@@ -52,7 +52,7 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	transition: background 0.1s ease-out 0.4s;
+	transition: background 0.1s ease-out 0.96s;
 }
 
 .scroll-overlay__shim--visible {
@@ -76,8 +76,27 @@
 
 .scroll-overlay__hint--visible {
 	opacity: 1;
-	transition: opacity 0.1s ease-out 0.4s;
+	transition: opacity 0.1s ease-out 0.96s;
 	text-shadow:
 		0 0 2px rgba(#000, 0.1),
 		0 0 22px rgba(#fff, 0.1);
+}
+
+.scroll-overlay__hint:before {
+	content: '';
+	width: 58px;
+	height: 60px;
+	background: red;
+	display: block;
+	position: absolute;
+	top: -5px;
+	left: 50%;
+	transform: translate(-50%, -100%);
+	background: url('../images/orka-cartoon.png');
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	pointer-events: none;
+	transition: opacity 0.05s ease;
+	filter: drop-shadow(0 0 5px rgba(#000, 0.3)) invert(100%);
 }
