--- a/app/components/VideoPreview/_video-preview.scss
+++ b/app/components/VideoPreview/_video-preview.scss
@@ -40,4 +40,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+	background-size: cover;
+	background-position: center;
+	image-rendering: crisp-edges;
 }
