--- a/app/components/Cover/_cover.scss
+++ b/app/components/Cover/_cover.scss
@@ -24,6 +24,18 @@
 	// opacity: 1 !important;
 }
 
+.cover__canvas-wrapper:after {
+	background-image: url('/assets/images/noise-texture.png');
+	background-size: 150px 150px;
+	content: '';
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 33vh;
+}
+
 .cover__canvas-wrapper {
 	// opacity: 0;
 	transition: opacity 0.2s ease;
