--- a/app/components/FeedFilter/_feed-filter.scss
+++ b/app/components/FeedFilter/_feed-filter.scss
@@ -32,14 +32,14 @@
 
 .filter__option:before {
 	content: '';
-	width: 58px;
+	width: 38px;
 	height: 60px;
 	background: red;
 	display: block;
 	position: absolute;
-	top: -17px;
+	top: -22px;
 	left: 50%;
-	transform: translate(-78%, 0);
+	transform: translate(-88%, 0);
 	background: url('../images/orka-cartoon.png');
 	background-size: contain;
 	background-position: center;
@@ -58,7 +58,7 @@
 	opacity: 1;
 }
 
-.filter__option:hover:before {
-	opacity: 1;
-}
+// .filter__option:hover:before {
+// 	opacity: 1;
+// }
 
