--- a/app/components/StickyNav/_sticky-nav.scss
+++ b/app/components/StickyNav/_sticky-nav.scss
@@ -4,6 +4,8 @@
 	// z-index: 4;
 	// position: relative;
 	background: #333333;
+	background-image: url('/assets/images/noise-texture.png');
+	background-size: 150px 150px;
 }
 
 .sticky-nav {
@@ -27,6 +29,8 @@
 	z-index: 1;
 	border-bottom: 1px solid transparent;
 	transition: border 0.1s ease, box-shadow 0.2s ease;
+	background-image: url('/assets/images/noise-texture.png');
+	background-size: 150px 150px;
 
 
 	@include mobile {
