--- a/app/main.scss
+++ b/app/main.scss
@@ -92,7 +92,7 @@ a {
 }
 
 .home {
-	padding-bottom: 100px;
+	padding-bottom: 120px;
 	// filter: blur(5px);
 	box-shadow:
 		0 1px 2px rgba(#000, 0.12),
@@ -145,7 +145,7 @@ a {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 100px;
+	height: 120px;
 	background: #111;
 	background-image: url('/assets/images/noise-texture.png');
 	background-size: 150px 150px;
@@ -153,14 +153,15 @@ a {
 
 .content-footer:before {
 	content: '';
-	width: 152px;
-	height: 81px;
+	width: 192px;
+	height: 100px;
 	display: block;
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	margin-left: 30px;
 	transform: translate(-50%, -50%);
-	background-image: url('../images/orka--go.svg');
+	background-image: url('../images/orka--orka.svg');
 	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
