--- a/app/components/Cover/_cover.scss
+++ b/app/components/Cover/_cover.scss
@@ -52,6 +52,7 @@
 	transform: translateZ(0);
 	background: #000;
 	opacity: 1;
+	pointer-events: none;
 	box-shadow:
 		0 1px 2px rgba(#000, 0.15),
 		0 0px 15px rgba(#000, 0.33);
