--- a/app/components/Cover/_cover.scss
+++ b/app/components/Cover/_cover.scss
@@ -58,6 +58,18 @@
 		0 0px 15px rgba(#000, 0.33);
 }
 
+.cover__back-to-top {
+	position: fixed;
+	pointer-events: all;
+	cursor: pointer;
+	// background: red;
+	width: 100%;
+	height: 20px;
+	top: 0;
+	left: 0;
+	z-index: 111;
+}
+
 .cover__canvas-wrapper {
 	// position: relative;
 }
