--- a/app/main.scss
+++ b/app/main.scss
@@ -1,3 +1,23 @@
+// @font-face {
+//   font-family: 'CothamSans';
+//   font-weight: normal;
+//   src: url('../fonts/CothamSans.eot') fomat('eot');
+//   src:
+//   	url('../fonts/CothamSans.ttf') fomat('ttf'),
+//   	url('../fonts/CothamSans.otf') fomat('otf');
+// }
+
+
+@font-face {
+  font-family: 'CothamSansRegular';
+  src: url('../fonts/CothamSans.eot?') format('eot'),
+       url('../fonts/CothamSans.woff2') format('woff2'),
+       url('../fonts/CothamSans.woff') format('woff'),
+       url('../fonts/CothamSans.otf')  format('opentype'),
+       url('../fonts/CothamSans.ttf')  format('truetype'),
+       url('../fonts/CothamSans.svg#CothamSans') format('svg');
+}
+
 @import './scss/_reset.scss';
 @import './scss/_vars.scss';
 @import './scss/_mixins.scss';
@@ -16,14 +36,6 @@
 @import './pages/Post/_post';
 
 
-@font-face {
-  font-family: 'CothamSans';
-  font-weight: normal;
-  src: url('assets/fonts/CothamSans.eot') fomat('eot');
-  src:
-  	url('assets/fonts/CothamSans.ttf') fomat('ttf'),
-  	url('assets/fonts/CothamSans.otf') fomat('otf');
-}
 
 // @font-face {
 // 	font-family: 'TeX Gyre Heros';
@@ -42,7 +54,7 @@
 }
 
 body {
-	font-family: 'CothamSans', 'Helvetica', sans-serif;
+	font-family: 'CothamSansRegular', 'Helvetica', sans-serif;
 	// font-family: 'TeX Gyre Heros', serif;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -147,7 +159,7 @@ a {
 	width: 100%;
 	height: 120px;
 	background: #111;
-	background-image: url('/assets/images/noise-texture.png');
+	background-image: url('../images/noise-texture.png');
 	background-size: 150px 150px;
 }
 
@@ -167,6 +179,10 @@ a {
 	background-repeat: no-repeat;
 	pointer-events: none;
 	transition: opacity 0.05s ease;
+	
+	@include mobile {
+		margin-left: 17px;
+	}
 	// filter: drop-shadow(0 0 5px rgba(#000, 0.3)) invert(100%);
 }
 
@@ -178,59 +194,59 @@ a {
 	background-position: center;
 	background-size: cover;
 	image-rendering: crisp-edges;
-	// background-image: url('/assets/images/placeholders/placeholder--0.jpg');
+	// background-image: url('../images/placeholders/placeholder--0.jpg');
 }
 
 .placeholder--0 {
-	background-image: url('/assets/images/placeholders/placeholder--0.jpg');	
+	background-image: url('../images/placeholders/placeholder--0.jpg');	
 }
 
 .placeholder--1 {
-	background-image: url('/assets/images/placeholders/placeholder--1.jpg');	
+	background-image: url('../images/placeholders/placeholder--1.jpg');	
 }
 
 .placeholder--2 {
-	background-image: url('/assets/images/placeholders/placeholder--2.jpg');	
+	background-image: url('../images/placeholders/placeholder--2.jpg');	
 }
 
 .placeholder--3 {
-	background-image: url('/assets/images/placeholders/placeholder--3.jpg');	
+	background-image: url('../images/placeholders/placeholder--3.jpg');	
 }
 
 .placeholder--4 {
-	background-image: url('/assets/images/placeholders/placeholder--4.jpg');	
+	background-image: url('../images/placeholders/placeholder--4.jpg');	
 }
 
 .placeholder--5 {
-	background-image: url('/assets/images/placeholders/placeholder--5.jpg');	
+	background-image: url('../images/placeholders/placeholder--5.jpg');	
 }
 
 .placeholder--6 {
-	background-image: url('/assets/images/placeholders/placeholder--6.jpg');	
+	background-image: url('../images/placeholders/placeholder--6.jpg');	
 }
 
 .placeholder--7 {
-	background-image: url('/assets/images/placeholders/placeholder--7.jpg');	
+	background-image: url('../images/placeholders/placeholder--7.jpg');	
 }
 
 .placeholder--8 {
-	background-image: url('/assets/images/placeholders/placeholder--8.jpg');	
+	background-image: url('../images/placeholders/placeholder--8.jpg');	
 }
 
 .placeholder--9 {
-	background-image: url('/assets/images/placeholders/placeholder--9.jpg');	
+	background-image: url('../images/placeholders/placeholder--9.jpg');	
 }
 
 .placeholder--10 {
-	background-image: url('/assets/images/placeholders/placeholder--10.jpg');	
+	background-image: url('../images/placeholders/placeholder--10.jpg');	
 }
 
 .placeholder--11 {
-	background-image: url('/assets/images/placeholders/placeholder--11.jpg');	
+	background-image: url('../images/placeholders/placeholder--11.jpg');	
 }
 
 .placeholder--12 {
-	background-image: url('/assets/images/placeholders/placeholder--12.jpg');	
+	background-image: url('../images/placeholders/placeholder--12.jpg');	
 }
 
 
