--- a/app/main.scss
+++ b/app/main.scss
@@ -73,6 +73,14 @@ a {
 	position: relative;
 }
 
+a:active {
+	opacity: 0.6;
+}
+
+.contact-option:active {
+	opacity: 0.6;
+}
+
 // a:before {
 // 	content: '';
 // 	width: 58px;
@@ -107,8 +115,8 @@ a {
 	padding-bottom: 120px;
 	// filter: blur(5px);
 	box-shadow:
-		0 1px 2px rgba(#000, 0.12),
-		0 0px 12px rgba(#000, 0.2);
+		0 1px 2px rgba(#000, 0.1),
+		0 0px 12px rgba(#000, 0.1);
 }
 
 .home__content {
@@ -116,8 +124,8 @@ a {
 	background: #111;
 	// transform: translate3d(0, 50vh, 0);
 	box-shadow:
-		0 1px 2px rgba(#000, 0.15),
-		0 0px 15px rgba(#000, 0.33);
+		0 1px 2px rgba(#000, 0.1),
+		0 0px 15px rgba(#000, 0.2);
 	transition:
 		opacity 0.3s ease-out,
 		transform 2.5s cubic-bezier(0, 1, 0.5, 1);
