--- a/app/components/FeedFilter/_feed-filter.scss
+++ b/app/components/FeedFilter/_feed-filter.scss
@@ -29,58 +29,59 @@
 .filter__option--active {
 	cursor: default;
 	pointer-events: none;
-	opacity: 0.6;
+	// opacity: 0.6;
 	text-transform: underline;
 	// border-left: 1px solid rgba(#DB6741, 0.8);
 }
 
 .filter__option:before {
 	content: '';
-	width: 15px;
-	height: 15px;
+	width: 72px;
+	height: 55px;
 	display: block;
 	position: absolute;
 	top: 50%;
-	left: 0;
-	transform: translate(-59%, -120%);
-	background: url('../images/orka-cartoon.png');
+	left: 50%;
+	transform: translate(-50%, -56%);
+	background: url('../images/loop.svg');
 	background-size: contain;
 	background-position: center center;
 	background-repeat: no-repeat;
+	// background-color: rgba(#ff0000, 0.3);
 	// background-color: red;
 	pointer-events: none;
 	opacity: 0;
 	transition: opacity 0.15s ease;
 	filter: drop-shadow(0 0 5px rgba(#000, 0.6));
-	display: none;
+	// display: none;
 }
 
-.filter__option:nth-child(1):before {
-	background-image: url('../images/splash--1.svg');
-}
-
-.filter__option:nth-child(2):before {
-	background-image: url('../images/splash--2.svg');
-	// left: 100%;
-	// transform: translate(-40%, -110%);
-}
-
-.filter__option:nth-child(3):before {
-	background-image: url('../images/splash--3.svg');
-}
-
-.filter__option:nth-child(4):before {
-	background-image: url('../images/splash--4.svg');
-	// left: 100%;
-	// transform: translate(-20%, -110%);
-}
-
-.filter__option:nth-child(5):before {
-	background-image: url('../images/splash--1.svg');
-}
-// .filter:hover .filter__option--active:before {
-// 	opacity: 0;
+// .filter__option:nth-child(1):before {
+// 	background-image: url('../images/splash--1.svg');
 // }
+
+// .filter__option:nth-child(2):before {
+// 	background-image: url('../images/splash--2.svg');
+// 	// left: 100%;
+// 	// transform: translate(-40%, -110%);
+// }
+
+// .filter__option:nth-child(3):before {
+// 	background-image: url('../images/splash--3.svg');
+// }
+
+// .filter__option:nth-child(4):before {
+// 	background-image: url('../images/splash--4.svg');
+// 	// left: 100%;
+// 	// transform: translate(-20%, -110%);
+// }
+
+// .filter__option:nth-child(5):before {
+// 	background-image: url('../images/splash--1.svg');
+// }
+// // .filter:hover .filter__option--active:before {
+// // 	opacity: 0;
+// // }
 
 .filter__option--active:before {
 	opacity: 1;
