a few small changes

--- a/app/main.scss
+++ b/app/main.scss
@@ -169,6 +169,7 @@ a:active {
 	background: #111;
 	background-image: url('../images/noise-texture.png');
 	background-size: 150px 150px;
+	cursor: n-resize;
 }
 
 .content-footer:before {
